# CPython-example

./: CMakeLists.txt  README.md
example/P0/: 0-PythonCpp.cpp  1-c_code.c  1.c.py  README.md  run.py
example/P1/: Python1_C.cpp  README.md
example/P2/: Python2_Var.cpp  README.md
example/P3/: Python_import C++ Model in Python .cpp  README.md  run.py  setup.py
example/P4/: Python3_C速度比较.cpp  README.md  run.py  setup.py
example/P4/Test/: he.py  run.py  run2.py
example/P5/: Python3_C返回数组.cpp  README.md  run.py  setup.py
